--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-color: rgb(68, 68, 68);
+    background-color: #444444;
     text-align: center;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
@@ -16,7 +16,7 @@ body {
 }
 
 main {
-    background-color: rgba(0, 0, 0, 0.76);
+    background-color: #000000c2;
     max-width: 650px;
     height: 400px;
     margin: 0 auto;
@@ -26,7 +26,7 @@ main {
 h1 {
     padding: 15px;
     font-size: 2.3em;
-    text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+    text-shadow: 5px 5px 5px #00000080;
 }
 
 img {
@@ -43,27 +43,25 @@ img:hover {
 /* Demais páginas */
 
 main#segunda {
+    padding: 0px 20px 0px 20px;
     max-width: 700px;
     height: 570px;
 }
 
 div.video {
-    margin: -15px 0px -10px 0px;
-    padding-bottom: 57%;
+    width: 100%;
+    padding-top: 56.25%; 
     position: relative;
 }
 
 div.video > iframe {
+    width: 100%;
+    height: 100%;
     position: absolute;
-    top: 5%;
-    left: 5%;
-    width: 90%;
-    height: 90%;
-}
-
-iframe {
-    background-color: rgb(92, 92, 92);
-    border-radius: 5px;
+    top: 0px;
+    left: 0px;
+    border-radius: 10px;
+    background-color: #808080;
 }
 
 a {
