--- a/CSS/style.css
+++ b/CSS/style.css
@@ -85,8 +85,18 @@ p {
 
 @media (max-width:600px){
 	
+    body {
+        background-color: #000000;
+        text-align: center;
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+        
+    }
+
     main {
         height: 100%;
+        border-radius: 0px;
+        padding-bottom: 20px;
     }
 
     img {
@@ -94,11 +104,12 @@ p {
     }
 
     img.botton {
-        width: 50px;
+        width: 45px;
     }
 
     main#segunda {
-        height: 0%;
+        height: 100%;
+
     }
 
 }
